Bug 386065 - "legend {font-size:0;} still shows the text (yahoo.com mainpage)" [p=chris@pearce.org.nz (Chris Pearce) r+sr=roc a=blocking1.9+]